[S1PRO-2367] Add footprint type 'linestring' to prip